/* Translingual */ moved "go to ruin" text into its own definition entry; wikilinked four words/terms in definition entries; added "ids=" ⿱队土 (composition) data to /Han char/ template <坠#23798799>

--- a/en/坠/坠.13027.wikitext
+++ b/en/坠/坠.13027.wikitext
@@ -2,9 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=弓人土 (NOG), X弓人土 (XNOG)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=弓人土 (NOG), X弓人土 (XNOG)|ids=⿱[[队]][[土]]}}
 
-# fall down, drop, sink, go to ruin
+# [[fall]] down, [[drop]], [[sink]]
+# go to [[ruin]]
 
 ====References====
 * {{Han ref|kx=0227.271|hdz=10429.040|uh=5760|ud=22368}}
