/* Translingual */ added "ids=" ⿰土皮 (composition) data to /Han char/ template <坡#23799044>

--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4414<sub>7</sub>|canj=土木竹水 (GDHE)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4414<sub>7</sub>|canj=土木竹水 (GDHE)|ids=⿰[[土]][[皮]]}}
 
 # [[slope]], [[bank]], [[hillside]]
 
