--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4915<sub>0</sub>|canj=土火手 (GFQ)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4915<sub>0</sub>|canj=土火手 (GFQ)|ids=⿰[[土]][[半]]}}
 
 # {{defn|Han|sort=土05}}
 
