--- a/en/坣/坣.13030.wikitext
+++ b/en/坣/坣.13030.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[nì]] ([[ni4]]), [[tāng]] ([[tang1]])|wg=ni<sup>4</sup>, t'ang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[tāng]] ([[tang1]]), [[nì]] ([[ni4]])|wg=t'ang<sup>1</sup>, ni<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=土05}}
 
