/* Translingual */ added "ids=" ⿱龸土 (composition) data to /Han char/ template <坣#23799319>

--- a/en/坣/坣.13030.wikitext
+++ b/en/坣/坣.13030.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=火月土 (FBG)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=火月土 (FBG)|ids=⿱[[龸]][[土]]}}
 
 # {{defn|Han|sort=土05}}
 
