--- a/en/坥/坥.13032.wikitext
+++ b/en/坥/坥.13032.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土月一 (GBM)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土月一 (GBM)|ids=⿰[[土]][[且]]}}
 
 # {{defn|Han|sort=土05}}
 
