--- a/en/坦/坦.13033.wikitext
+++ b/en/坦/坦.13033.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4611<sub>0</sub>|canj=土日一 (GAM)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4611<sub>0</sub>|canj=土日一 (GAM)|ids=⿰[[土]][[旦]]}}
 
 # [[flat]], [[smooth]]
-# self-possessed
+# [[self-possessed]]
 
 ====References====
 * {{Han ref|kx=0226.180|dkj=04971|dj=0461.300|hdz=10431.030|uh=5766|ud=22374|bh=A95A|bd=43354}}
