--- a/en/坧/坧.13034.wikitext
+++ b/en/坧/坧.13034.wikitext
@@ -3,10 +3,12 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土一口 (GMR)|ids=⿰[[土]][[石]]}}
 
-# {{defn|Han|sort=土05}}
+# (archaic variant of [[址]]) [[site]], [[location]]
+# [[land]] for [[house]]
 
 ====References====
 * {{Han ref|kx=0226.190|dkj=04972|dj=0461.310|hdz=10430.020|uh=5767|ud=22375}}
+*[http://yedict.com/htm/57/5767.htm yedict.com (叶典)]
 
 ----
 
