--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -1,11 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4311<sub>1</sub>|canj=土十心 (GJP)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4311<sub>1</sub>|canj=土十心 (GJP)|ids=⿰[[土]][[它]]}}
 
-# {{defn|Han|sort=土05}}
-# lump
-# spherical object
+# a [[lump]], [[heap]]
+# [[spherical]] [[object]]
 
 ====References====
 * {{Han ref|kx=0226.200|dkj=04974|dj=0461.320|hdz=10435.060|uh=5768|ud=22376|bh=CC40|bd=52288}}
