added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土05/ templates; added "References" section and nomfoundation.org link <坩#23800538>

--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -47,6 +47,18 @@
 
 # {{defn|lang=cmn|sort=土05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[cam]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5769 Nom Foundation]
+
 [[zh-min-nan:坩]]
 [[fr:坩]]
 [[ko:坩]]
