--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -70,7 +70,7 @@ In current form, {{Han compound|丨|t1=one|日|t2=day}}, representing the day be
 
 ===Prefix===
 {{ja-pos|きゅう|prefix}}
-# [[old]], [[previous]], [[-ex]], [[former]]
+# [[old]], [[previous]], [[former]], [[paleo-]], [[-ex]]
 
 {{ja-pos|ふる|prefix}}
 # [[old]], [[used]], [[previous]]
