--- a/en/坬/坬.13039.wikitext
+++ b/en/坬/坬.13039.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土竹女人 (GHVO)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土竹女人 (GHVO)|ids=⿰[[土]][[瓜]]}}
 
 # {{defn|Han|sort=土05}}
 
