--- a/en/坮/坮.13041.wikitext
+++ b/en/坮/坮.13041.wikitext
@@ -12,6 +12,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[toi4]]|y=toi4}}
+
+# {{defn|lang=yue|sort=土05}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Japanese==
 
 ===Kanji===
