--- a/en/坯/坯.13042.wikitext
+++ b/en/坯/坯.13042.wikitext
@@ -49,6 +49,18 @@
 
 # {{defn|lang=cmn|sort=土05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[phôi]], [[phơ]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=576f Nom Foundation]
+
 [[zh-min-nan:坯]]
 [[fr:坯]]
 [[li:坯]]
