--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4712<sub>0</sub>|canj=土月口 (GBR)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4712<sub>0</sub>|canj=土月口 (GBR)|ids=⿰[[土]][[冋]]}}
 
 # [[wilds]]
 
