--- a/en/坲/坲.13045.wikitext
+++ b/en/坲/坲.13045.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[fat6]]|y=fat6}}
+
+# {{defn|lang=yue|sort=土05}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Japanese==
 
 ===Kanji===
