--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -4,7 +4,8 @@
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4412<sub>7</sub>|canj=土女戈尸 (GVIS)|ids=⿰[[土]][[幼]]}}
 
 # a [[hollow]] in the [[ground]], a [[cavity]], [[depression]]
-# [[undulating]], [[depressed]]
+# [[undulating]]
+# [[depressed]]
 
 ====References====
 * {{Han ref|kx=0226.330|dkj=04988|dj=0462.100|hdz=10436.090|uh=5773|ud=22387|bh=CBFC|bd=52220}}
