--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -58,6 +58,18 @@
 
 # {{defn|lang=zhx-mid|sort=土05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[ao]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5773 Nom Foundation]
+
 [[fr:坳]]
 [[li:坳]]
 [[mg:坳]]
