/* Translingual */ wikilinked two words/terms in definition entry; added "ids=" ⿰土丘 (composition) data to /Han char/ template <坵#23813153>

--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4211<sub>1</sub>|canj=土人一 (GOM)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4211<sub>1</sub>|canj=土人一 (GOM)|ids=⿰[[土]][[丘]]}}
 
-# earthenware, earthenware vessel
+# [[earthenware]], earthenware [[vessel]]
 
 ====References====
 * {{Han ref|kx=0226.350|dkj=04990|dj=0462.120|hdz=10432.080|uh=5775|ud=22389|bh=CBFA|bd=52218}}
