added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土05/ templates <坵#23813167>

--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -47,6 +47,15 @@
 
 # {{defn|lang=cmn|sort=土05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[gò]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
 [[zh-min-nan:坵]]
 [[fr:坵]]
 [[ko:坵]]
