--- a/en/坶/坶.13049.wikitext
+++ b/en/坶/坶.13049.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4715<sub>0</sub>|canj=土田卜戈 (GWYI)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4715<sub>0</sub>|canj=土田卜戈 (GWYI)|ids=⿰[[土]][[母]]}}
 
 # {{defn|Han|sort=土05}}
 
