--- a/en/坷/坷.13050.wikitext
+++ b/en/坷/坷.13050.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4112<sub>0</sub>|canj=土一弓口 (GMNR)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4112<sub>0</sub>|canj=土一弓口 (GMNR)|ids=⿰[[土]][[可]]}}
 
-# clod of earth, lump of soil
+# [[clod]] of [[earth]], [[lump]] of [[soil]]
 
 ====References====
 * {{Han ref|kx=0226.380|dkj=04994|dj=0462.160|hdz=10429.160|uh=5777|ud=22391|bh=A956|bd=43350}}
