--- a/en/坹/坹.13052.wikitext
+++ b/en/坹/坹.13052.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土十金 (GJC)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土十金 (GJC)|ids=⿰[[土]][[穴]]}}
 
 # {{defn|Han|sort=土05}}
 
