--- a/en/坺/坺.13053.wikitext
+++ b/en/坺/坺.13053.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土戈大水 (GIKE)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土戈大水 (GIKE)|ids=⿰[[土]][[犮]]}}
 
-# {{defn|Han|sort=土05}}
+# {{context|Cantonese}} [[classifier]] for [[soft]] [[mass]]es
 
 ====References====
 * {{Han ref|kx=0227.040|dkj=05000|dj=0462.210|hdz=10430.080|uh=577A|ud=22394}}
