/* Translingual */ re-added "embankment; to stop" definition entries; wikilinked seven words/terms in definition entries; added "ids=" ⿰土氐 (composition) data to /Han char/ template <坻#23813211>

--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -1,9 +1,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>0</sub>|canj=土竹心一 (GHPM), 土竹女戈 (GHVI)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>0</sub>|canj=土竹心一 (GHPM), 土竹女戈 (GHVI)|ids=⿰[[土]][[氐]]}}
 
-# islet small body of land in the water
+# [[islet]], small [[body]] of [[land]] in [[water]]
+# [[embankment]]
+# to [[stop]]
 # [[hillside]]
 
 ====References====
