/* Cantonese */ added "jyut=" (jyutping) data -- caak3 -- to /yue-hanzi/ template <坼#23813231>

--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=chaak3}}
+{{yue-hanzi|jyut=[[caak3]]|y=chaak3}}
 
 # {{defn|lang=yue|sort=土05}}
 
