--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>1</sub>|canj=土竹一卜 (GHMY)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>1</sub>|canj=土竹一卜 (GHMY)|ids=⿰[[土]][[斥]]}}
 
 # [[split]], [[tear]], [[open]]
 
