--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -150,6 +150,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Nahuatl: [[tlatoa]]
 * Navajo: {{t|nv|yáłtiʼ}}
 * Ngarrindjeri: {{t|nay|kungun}}
+* North Frisian: {{t|frr|spreege}}
 * Norwegian: {{t+|no|snakke}}
 * Novial: {{t|nov|parla}}
 * Occitan: {{t+|oc|parlar}}
