--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -196,7 +196,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Turkish: {{t+|tr|konuşmak}}
 * Turkmen: {{t|tk|gürlemek}}, {{t|tk|geplemek}}, {{t|tk|sözlemek}}
 * Tuvan: {{t|tyv|чугаалаар|tr=čugaalaar}}
-* Ukrainian: {{t|uk|говорити|tr=hovorýty}}, {{t+|uk|розмовляти|tr=rozmovljáty}}, {{t|uk|сказати|sc=Cyrl}}
+* Ukrainian: {{t|uk|говорити|tr=hovorýty}} {{impf}}, {{t|uk|сказати|tr=skazáty}} {{pf}}; {{t+|uk|розмовляти|tr=rozmovljáty}}, 
 * Urdu: {{t|ur|بولنا|tr=bolnā}}
 * Uzbek: {{t+|uz|gaplashmoq}}
 * Vietnamese: {{t+|vi|nói}}, {{t+|vi|nói chuyện}}, {{t|vi|nói được}}
