--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -180,7 +180,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Slovene: {{t+|sl|govoriti}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|powědaś|impf}}, {{t|dsb|powěźeś|pf}}
-*: Upper Sorbian: {{t|hsb|rěčeć}}, {{t|hsb|porěčeć}}
+*: Upper Sorbian: {{t|hsb|rěčeć}} {{impf}}, {{t|hsb|porěčeć}} {{pf}}
 * Sotho: {{t+|st|bua}}
 * Spanish: {{t+|es|hablar}}
 * {{trreq|sva}}
