--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人木戈 (GODI)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人木戈 (GODI)|ids=⿰[[土]][[付]]}}
 
 # [[mound]]
-# used in place names
+# used in [[place]] [[name]]s
 
 ====References====
 * {{Han ref|kx=0227.130|dkj=05009|dj=0462.290|hdz=10432.100|uh=577F|ud=22399}}
