added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土05/ templates; added "References" section and nomfoundation.org link <坿#23827858>

--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -11,6 +11,18 @@
 
 ----
 
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[phụ]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=577f Nom Foundation]
+
+----
+
 ==Japanese==
 
 ===Kanji===
