--- a/en/垀/垀.13059.wikitext
+++ b/en/垀/垀.13059.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>9</sub>|canj=土竹火木 (GHFD)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>9</sub>|canj=土竹火木 (GHFD)|ids=⿰[[土]][[乎]]}}
 
 # {{defn|Han|sort=土05}}
 
