--- a/en/垁/垁.13060.wikitext
+++ b/en/垁/垁.13060.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人大 (GOK), XX土人大 (XXGOK)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人大 (GOK), XX土人大 (XXGOK)|ids=⿰[[土]][[矢]]}}
 
 # {{defn|Han|sort=土05}}
 
