--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4011<sub>8</sub>|canj=土卜廿 (GYT)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4011<sub>8</sub>|canj=土卜廿 (GYT)|ids=⿰[[土]][[立]]}}
 
 # [[garbage]], [[refuse]], [[waste]]
 
