--- a/en/垄/垄.13063.wikitext
+++ b/en/垄/垄.13063.wikitext
@@ -24,7 +24,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|tra=壟|pin=[[āo]] ([[ao1]]), [[lǒng]] ([[long3]])|wg=ao<sup>1</sup>, lung<sup>3</sup>}}
+{{cmn-hanzi|tra=壟|pin=[[lǒng]] ([[long3]]), [[āo]] ([[ao1]])|wg=lung<sup>3</sup>, ao<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=土05}}
 
