/* Translingual */ wikilinked two words/terms in last definition entry; added "ids=" ⿰土龙 (composition) data to /Han char/ template <垅#23827909>

--- a/en/垅/垅.13064.wikitext
+++ b/en/垅/垅.13064.wikitext
@@ -2,10 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土戈大心 (GIKP)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土戈大心 (GIKP)|ids=⿰[[土]][[龙]]}}
 
 # [[mound]], [[grave]]
-# ridge in field
+# [[ridge]] in [[field]]
 
 ====References====
 * {{Han ref|kx=0227.271|hdz=10430.061|uh=5785|ud=22405}}
