/* Translingual */ wikilinked three words/terms in first definition entry; added "ids=" ⿰土卢 (composition) data to /Han char/ template <垆#23827911>

--- a/en/垆/垆.13065.wikitext
+++ b/en/垆/垆.13065.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土卜尸 (GYS)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土卜尸 (GYS)|ids=⿰[[土]][[卢]]}}
 
-# black clods of earth
+# [[black]] [[clod]]s of [[earth]]
 # [[shop]], [[hut]]
 
 ====References====
