--- a/en/垇/垇.13066.wikitext
+++ b/en/垇/垇.13066.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[aau3]], [[ngaau3]], [[aau1]], [[ngaau1]]|y=aau3, ngaau3, aau1, ngaau1}}
+
+# {{defn|lang=yue|sort=土05}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
