--- a/en/垇/垇.13066.wikitext
+++ b/en/垇/垇.13066.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土尸尸山 (GSSU)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土尸尸山 (GSSU)|ids=⿰[[土]][[凹]]}}
 
 # {{defn|Han|sort=土05}}
 
