--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -18,7 +18,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=aau1, aau3}}
+{{yue-hanzi|jyut=[[aau1]], [[aau3]]|y=aau1, aau3}}
 
 # {{defn|lang=yue|sort=土05}}
 
