--- a/en/垇/垇.13066.wikitext
+++ b/en/垇/垇.13066.wikitext
@@ -3,10 +3,13 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土尸尸山 (GSSU)|ids=⿰[[土]][[凹]]}}
 
-# {{defn|Han|sort=土05}}
+# (same as [[坳]]) a [[hollow]] in the [[ground]], a [[cavity]], [[depression]]
+# [[undulating]]
+# [[depressed]]
 
 ====References====
 * {{Han ref|kx=0227.271|hdz=10432.020|uh=5787|ud=22407}}
+*[http://yedict.com/htm/57/5787.htm yedict.com (叶典)]
 
 ----
 
