--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -29,6 +29,15 @@
 
 # [[lot]] (site of [[house]], [[집터]])
 
+----
+
+==Mandarin==
+
+===Hanzi===
+{{cmn-hanzi|pin=[[dài]] ([[dai4]])|wg=tai<sup>4</sup>}}
+
+# {{defn|lang=cmn|sort=土05}}
+
 [[Category:Ghost kanji]]
 
 [[fr:垈]]
