added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土05/ templates <垉#23827942>

--- a/en/垉/垉.13068.wikitext
+++ b/en/垉/垉.13068.wikitext
@@ -29,6 +29,18 @@
 
 # {{defn|lang=cmn|sort=土05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[bàu]]|rs=土05}}
+
+# {{defn|lang=vi|sort=土05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5789 Nom Foundation]
+
 [[Category:Ghost kanji]]
 
 [[fr:垉]]
