--- a/en/垊/垊.13069.wikitext
+++ b/en/垊/垊.13069.wikitext
@@ -8,6 +8,18 @@
 ====References====
 * {{Han ref|kx=0227.271|hdz=10435.131|uh=578A|ud=22410}}
 
+----
+
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[man4]]|y=man4}}
+
+# {{defn|lang=yue|sort=土05}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
 [[fr:垊]]
 [[pl:垊]]
 [[zh:垊]]
