--- a/en/垊/垊.13069.wikitext
+++ b/en/垊/垊.13069.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土口女心 (GRVP)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土口女心 (GRVP)|ids=⿰[[土]][[民]]}}
 
 # {{defn|Han|sort=土05}}
 
