--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -33,11 +33,9 @@
 * {{ja-readings|on=[[きょく]] (kyoku)|kun=[[あさひ]] (asahi)}}
 
 ===Proper noun===
-{{ja-pos|k|proper|hira=あきら|rom=Akira}}
+{{ja-pos|あきら|proper}}
 
-# {{given name|male|lang=ja}}
-
-[[Category:Japanese male given names|あきら]]
+# {{given name|male|lang=ja|sort=あきら}}
 
 ----
 
