--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -53,7 +53,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=[[hsing2|hsing<sup>2</sup>]]}}
+{{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=hsing<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=土06}}
 
