--- a/en/垎/垎.13073.wikitext
+++ b/en/垎/垎.13073.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹水口 (GHER)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹水口 (GHER)|ids=⿰[[土]][[各]]}}
 
 # {{defn|Han|sort=土06}}
 
