--- a/en/垎/垎.13073.wikitext
+++ b/en/垎/垎.13073.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[haak6]]|y=haak6}}
+
+# {{defn|lang=yue|sort=土06}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
