--- a/en/垏/垏.13074.wikitext
+++ b/en/垏/垏.13074.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[leot6]]|y=leut6}}
+
+# {{defn|lang=yue|sort=土06}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Japanese==
 
 ===Kanji===
