--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -14,6 +14,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ci4]]|y=chi4}}
+
+# {{defn|lang=yue|sort=土06}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Japanese==
 
 ===Kanji===
