--- a/en/垑/垑.13077.wikitext
+++ b/en/垑/垑.13077.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ci2]]|y=chi2}}
+
+# {{defn|lang=yue|sort=土06}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
