--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈戈戈土 (IIIG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈戈戈土 (IIIG)|ids=⿱[[厽]][[土]]}}
 
-# rampart, military wall
+# [[rampart]], [[military]] [[wall]]
 
 ====References====
 * {{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
