/* Cantonese */ added "jyut=" (jyutping) data -- leoi5 -- to /yue-hanzi/ template <垒#23847427>

--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=leui5|tra=壘}}
+{{yue-hanzi|jyut=[[leoi5]]|y=leui5|tra=壘}}
 
 # {{defn|lang=yue|sort=土06}}
 
