added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土06/ templates; added "References" section and nomfoundation.org link <垒#23847458>

--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -27,6 +27,18 @@
 
 # {{defn|lang=cmn|sort=土06}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[luỹ]]|rs=土06}}
+
+# {{defn|lang=vi|sort=土06}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5792 Nom Foundation]
+
 [[fr:垒]]
 [[mg:垒]]
 [[pl:垒]]
