--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -2,10 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4018<sub>2</sub>|canj=土卜女人 (GYVO)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4018<sub>2</sub>|canj=土卜女人 (GYVO)|ids=⿰[[土]][[亥]]}}
 
 # [[border]], [[boundary]], [[frontier]]
-# 10^20<!--What does the symbol ^ mean in this context?-->
+# {{context|Mathematics}} 10^20
 
 ====References====
 * {{Han ref|kx=0227.400|dkj=05040|dj=0463.260|hdz=10441.130|uh=5793|ud=22419|bh=ABB2|bd=43954}}
