--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -5,7 +5,7 @@
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4018<sub>2</sub>|canj=土卜女人 (GYVO)|ids=⿰[[土]][[亥]]}}
 
 # [[border]], [[boundary]], [[frontier]]
-# (''Mathematics'') 10^20
+# (''mathematics'') 10^20
 
 ====References====
 * {{Han ref|kx=0227.400|dkj=05040|dj=0463.260|hdz=10441.130|uh=5793|ud=22419|bh=ABB2|bd=43954}}
@@ -17,6 +17,7 @@
 
 [[Category:Chinese numbers]]
 [[Category:Chinese numerals]]
+
 ----
 
 ==Cantonese==
