/* Translingual */ wikilinked two words/terms in definition entry; added "ids=" ⿱后土 (composition) data to /Han char/ template <垕#23847675>

--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=7221<sub>4</sub>|canj=竹口土 (HRG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=7221<sub>4</sub>|canj=竹口土 (HRG)|ids=⿱[[后]][[土]]}}
 
-# used in place names
+# used in [[place]] [[name]]s
 
 ====References====
 * {{Han ref|kx=0228.010|dkj=05059|dj=0464.130|hdz=10440.020|uh=5795|ud=22421|bh=CE5E|bd=52830}}
