--- a/en/垖/垖.13082.wikitext
+++ b/en/垖/垖.13082.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹口口 (GHRR)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹口口 (GHRR)|ids=⿰[[土]][[𠂤]]}}
 
 # {{defn|Han|sort=土06}}
 
