--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -114,7 +114,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
 * Ngazidja Comorian: {{t|zdj|uparisa}}
-* North Frisian: {{t|frr|fine}}
+* North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}
 * Norwegian: {{t+|no|finne}}
 * Novial: {{t|nov|trova}}
 * {{trreq|os}}
