--- a/en/垙/垙.13085.wikitext
+++ b/en/垙/垙.13085.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[gwong1]], [[gong1]]|y=gwong1, gong1}}
+
+# {{defn|lang=yue|sort=土06}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Japanese==
 
 ===Kanji===
