--- a/en/址/址.12995.wikitext
+++ b/en/址/址.12995.wikitext
@@ -30,7 +30,7 @@
 * {{ja-readings|on=[[し]] (shi)|kun=[[あと]] (ato)}}
 
 ===Noun===
-{{ja-noun|k|hira=あと|rom=ato}} 
+{{ja-noun|あと}} 
 
 # {{alternative form of|跡|lang=ja}}
 
