added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土06/ templates; added "References" section and nomfoundation.org link <垛#23876988>

--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -40,6 +40,18 @@
 
 # {{defn|lang=cmn|sort=土06}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[đoá]]|rs=土06}}
+
+# {{defn|lang=vi|sort=土06}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=579b Nom Foundation]
+
 [[fr:垛]]
 [[mg:垛]]
 [[pl:垛]]
