--- a/en/垜/垜.13088.wikitext
+++ b/en/垜/垜.13088.wikitext
@@ -1,9 +1,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土弓尸木 (GNSD)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土弓尸木 (GNSD)|ids=⿰[[土]][[朶]]}}
 
 # [[heap]]
+# [[buttress]]
+# [[battlement]]s
 
 ====References====
 * {{Han ref|kx=0228.090|dkj=05049|dj=0464.070|hdz=10441.010|uh=579C|ud=22428}}
