--- a/en/垜/垜.13088.wikitext
+++ b/en/垜/垜.13088.wikitext
@@ -12,6 +12,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[do2]]|y=do2}}
+
+# {{defn|lang=yue|sort=土06}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
