--- a/en/垞/垞.13090.wikitext
+++ b/en/垞/垞.13090.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4311<sub>4</sub>|canj=土十竹心 (GJHP)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4311<sub>4</sub>|canj=土十竹心 (GJHP)|ids=⿰[[土]][[宅]]}}
 
-# small mound
-# place name
+# [[small]] [[mound]]
+# [[place]] [[name]]
 # [[hillock]]
 
 ====References====
