added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=土06/ templates; added "References" section and nomfoundation.org link <垞#23878184>

--- a/en/垞/垞.13090.wikitext
+++ b/en/垞/垞.13090.wikitext
@@ -49,6 +49,18 @@
 
 # {{defn|lang=cmn|sort=土06}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[trà]], [[trách]]|rs=土06}}
+
+# {{defn|lang=vi|sort=土06}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=579e Nom Foundation]
+
 [[fr:垞]]
 [[li:垞]]
 [[pl:垞]]
