--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -1,10 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4815<sub>1</sub>|canj=土廿手 (GTQ)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4815<sub>1</sub>|canj=土廿手 (GTQ)|ids=⿰[[土]][[羊]]}}
 
-# {{defn|Han|sort=土06}}
-# ~ Field (''used in place names'')
+# (''used in place names'') ~ Field
 
 ====References====
 * {{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
