--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4815<sub>1</sub>|canj=土廿手 (GTQ)|ids=⿰[[土]][[羊]]}}
 
-# (''used in place names'') ~ Field
+# (''used in place names'') [[field]] (as in "~ Field")
 
 ====References====
 * {{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
+*[http://yedict.com/htm/57/579F.htm yedict.com (叶典)]
 
 ----
 
