--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4216<sub>1</sub>|canj=土竹一口 (GHMR)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4216<sub>1</sub>|canj=土竹一口 (GHMR)|ids=⿰[[土]][[后]]}}
 
 # [[dirt]], [[filth]], [[stain]]s
 # [[dirty]]
