--- a/en/垥/垥.13097.wikitext
+++ b/en/垥/垥.13097.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4816<sub>1</sub>|canj=土人一口 (GOMR)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4816<sub>1</sub>|canj=土人一口 (GOMR)|ids=⿰[[土]][[合]]}}
 
 # {{defn|Han|sort=土06}}
 
