--- a/en/垥/垥.13097.wikitext
+++ b/en/垥/垥.13097.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4816<sub>1</sub>|canj=土人一口 (GOMR)|ids=⿰[[土]][[合]]}}
 
-# {{defn|Han|sort=土06}}
+# [[dike]] [[water]], water in the [[embankment]]
 
 ====References====
 * {{Han ref|kx=0228.240|dkj=05063|dj=0464.200|hdz=10440.040|uh=57A5|ud=22437|bh=CE5C|bd=52828}}
+*[http://yedict.com/htm/57/57A5.htm yedict.com (叶典)]
 
 ----
 
