--- a/en/垦/垦.13098.wikitext
+++ b/en/垦/垦.13098.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=日女土 (AVG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=日女土 (AVG)|ids=⿱[[艮]][[土]]}}
 
-# cultivate, reclaim, to farm land
+# [[cultivate]], [[reclaim]], to [[farm]] [[land]]
 
 ====References====
 * {{Han ref|kx=0228.291|dkj=05055|dj=0464.120|hdz=10442.080|uh=57A6|ud=22438}}
