Added Old Chinese and Middle Chinese entries. <春#23903694>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -173,6 +173,36 @@ There are minor differences in where the list stroke of the top component (top-l
 
 ----
 
+==Middle Chinese==
+
+===Etymology===
+From {{etyl|och|ltc}} {{term|春|tr=*tʰun|lang=och}}
+{{zh-hanzi|春}}
+
+===Han character===
+{{head|ltc|sc=Hani|tr= ''Karlgren-Li'' tśhuiĕn:, ''Baxter-Sagart'' tsyhwin}}
+
+===Pronunciation===
+* {{IPA|[t͡ɕʰwin]|lang=ltc}}
+
+===Noun===
+# {{context|season}} [[spring#Noun|spring]]
+
+----
+
+==Old Chinese==
+{{zh-hanzi|春}}
+
+===Han character===
+{{head|och|verb|sc=Hani}} (*tʰun)
+
+===Noun===
+# {{context|season}} [[spring#Noun|spring]]
+
+# {{defn|och}}
+
+----
+
 ==Vietnamese==
 
 ===Han character===
