--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -186,8 +186,7 @@ From {{etyl|och|ltc}} {{term|春|tr=*tʰun|lang=och}}
 * {{IPA|[t͡ɕʰwin]|lang=ltc}}
 
 ===Noun===
-{{head|ltc|noun}}
-# {{context|season}} [[spring#Noun|spring]]
+{{head|ltc|noun}} # {{context|season}} [[spring#Noun|spring]]
 
 ----
 
