--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -49,6 +49,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 * Italian: {{t+|it|biondo|m}}
 * Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}} {{qualifier|blond hair}}
 * Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}
+* Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
 * Macedonian: {{t|mk|русокос|m|tr=rúsokos}}, {{t|mk|плав|m|tr=plav}}, {{t|mk|русокоса|f|tr=rusókosa}}, {{t|mk|плава|f|tr=pláva}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
@@ -104,6 +105,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 * Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|bliond}}
 * Korean: {{t+|ko|금발|tr=geumbar-ui|alt=금발의|sc=Kore}}
+* Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f|tr=rus}}, {{t|mk|плав|f|tr=plav}}
 * Russian: {{t+|ru|светлый|tr=svétlyj}}, {{t+|ru|русый|tr=rúsyj|sc=Cyrl}}
 * Spanish: {{t+|es|rubio}}
@@ -123,6 +125,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 *: Ancient: {{t|grc|ξανθός|sc=polytonic}}
 {{trans-mid}}
 * Latin: {{t+|la|flāvus|m}}
+* Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
 * Macedonian: {{t|mk|светол|m|tr=svétol}}, {{t|mk|белолик|m|tr=bélolik}}, {{t|mk|светла|f|tr=svétla}}, {{t|mk|белолика|f|tr=belólika}}
 * Persian: {{t+|fa|بور|tr=bur|sc=fa-Arab}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
