--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -211,6 +211,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 {{trans-top|to have a conversation}}
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|keskustella}}, {{t+|fi|jutella}}
 {{trans-mid}}
+* Italian: {{t+|it|conversare}}
 * Swedish: {{t+|sv|konversera}}, {{t+|sv|snacka}}, {{t|sv|tala samman}}, {{t+|sv|samtala}}
 {{trans-bottom}}
 
