# {{cx|US|politics|lang=en}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.  #: ''a '''straight''' Republican; a '''straight''' Democrat''  # {{cx|US|politics|lang=en}} Containing the names of <straight#23987059>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -83,6 +83,10 @@
 # {{context|obsolete|rare|lang=en}} [[strait|Strait]]; [[narrow]].
 #* Sir J. Mandeville
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
+# {{cx|US|politics|lang=en}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
+#: ''a '''straight''' Republican; a '''straight''' Democrat''
+# {{cx|US|politics|lang=en}} Containing the names of all the regularly nominated candidates of a party and no others.
+#: ''a '''straight''' ballot''
 
 ====Antonyms====
 * [[curved]]
