/* Verb */ Senses structured <cut#24005542>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -300,26 +300,40 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 ===Verb===
 {{en-verb|cuts|cutting|cut}}
 
-# {{context|transitive|lang=en}} To [[perform]] an [[incision]] on, for example with a [[knife]].
-#: {{usex|lang=en|I '''cut''' the skin on my arm.}}
-# {{context|transitive|lang=en}} To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
-#: {{usex|lang=en|Would you please '''cut''' the cake?}}
-# {{context|transitive|lang=en}} To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
-#: {{usex|lang=en|Travis was '''cut''' from the team.}}
+# {{context|transitive|lang=en}} To [[incise]], to cut into the surface of something.
+## To [[perform]] an [[incision]] on, for example with a [[knife]].
+##: {{usex|lang=en|I '''cut''' the skin on my arm.}}
+## To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
+##: {{usex|lang=en|Would you please '''cut''' the cake?}}
+## To [[form]] or [[shape]] by cutting.
+##: {{usex|lang=en|I have three diamonds to '''cut''' today.}}
+## To [[wound]] with a knife.
+##* '''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
+##*: We don't want your money no more. We just going to '''cut''' you.
+## To make a [[stroke]] with a [[whip]].
+## To [[interfere]], as a horse; to strike one foot against the opposite foot or ankle in using the legs.
+# {{context|intransitive|lang=en}} To admit of incision or severance; to yield to a cutting instrument.
+#* '''1858''', {{w|Oliver Wendell Holmes, Sr.}}, ''{{w|The Autocrat of the Breakfast-Table}}'', ''The Deacon's Masterpiece'', in Chapter XI
+#*: The panels of white-wood that '''cuts''' like cheese, / But lasts like iron for things like these;
+# {{cx|transitive|social|lang=en}} To [[separate]], [[remove]], [[reject]] or [[reduce]].
+## To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
+##: {{usex|lang=en|Travis was '''cut''' from the team.}}
+## To [[reduce]], especially intentionally.
+##: {{usex|lang=en|They're going to '''cut''' salaries by fifteen percent.}}
+##* {{quote-magazine|date=2013-05-17|author=George Monbiot|authorlink=George Monbiot
+|volume=188|issue=23|page=19|magazine={{w|The Guardian Weekly}}
+|title=[http://www.guardian.co.uk/commentisfree/2013/may/06/politics-envy-keenest-rich Money just makes the rich suffer]
+|passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.&nbsp;[&hellip;]}}
+## To not [[attend]] a [[class]], especially when not [[permit]]ted.
+##: {{usex|lang=en|I '''cut''' fifth period to hang out with Angela.}}
+## To [[ignore]] as a social [[snub]].
+##: {{usex|lang=en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
+# {{context|intransitive|cinema|audio|usually as imperative|lang=en}} To [[cease]] [[record]]ing activities.
+#: {{usex|lang=en|After the actors read their lines, the director yelled "'''Cut'''!"}}
 # {{context|transitive|computing|lang=en}} To [[remove]] and place in [[memory]] for later use.
 #: {{usex|lang=en|Select the text, '''cut''' it, and then paste it in the other application.}}
 # {{context|intransitive|lang=en}} To [[enter]] a [[queue]] in the wrong place.
 #: {{usex|lang=en|One student kept trying to '''cut''' in front of the line.}}
-# {{context|intransitive|cinema|audio|usually as imperative|lang=en}} To [[cease]] [[record]]ing activities.
-#: {{usex|lang=en|After the actors read their lines, the director yelled "'''Cut'''!"}}
-# {{context|transitive|lang=en}} To [[reduce]], especially intentionally.
-#* {{quote-magazine|date=2013-05-17|author=George Monbiot|authorlink=George Monbiot
-|volume=188|issue=23|page=19|magazine={{w|The Guardian Weekly}}
-|title=[http://www.guardian.co.uk/commentisfree/2013/may/06/politics-envy-keenest-rich Money just makes the rich suffer]
-|passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.&nbsp;[&hellip;]}}
-#: {{usex|lang=en|They're going to '''cut''' salaries by fifteen percent.}}
-# {{context|transitive|lang=en}} To [[form]] or [[shape]] by cutting.
-#: {{usex|lang=en|I have three diamonds to '''cut''' today.}}
 # {{context|intransitive|lang=en}} To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: {{usex|lang=en|This road '''cuts''' right through downtown.}}
 #* {{quote-news|year=2011|date=January 18|author=Daniel Taylor|work=Guardian Online
@@ -330,8 +344,6 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |title=[http://www.theguardian.com/global-development/2013/aug/10/china-india-water-grab-dams-himalayas-danger Dams endanger ecology of Himalayas]
 |passage=Most of the Himalayan rivers have been relatively untouched by dams near their sources. Now the two great Asian powers, India and China, are rushing to harness them as they '''cut''' through some of the world's deepest valleys.}}
 # {{context|transitive|cricket|lang=en}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it. {{rfex}}
-# {{context|transitive|informal|lang=en}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
-#: {{usex|lang=en|I '''cut''' fifth period to hang out with Angela.}}
 # {{context|intransitive|lang=en}} To change [[direction]] suddenly.
 #: {{usex|lang=en|The football player '''cut''' to his left to evade a tackle.}}
 # {{context|transitive|intransitive|lang=en}} To [[divide]] a [[pack]] of [[playing card]]s into two.
@@ -340,22 +352,12 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 #: {{usex|lang=en|'''cut''' orders; &nbsp; '''cut''' a check}}
 # {{context|transitive|slang|lang=en}} To [[dilute]] a liquid, usually [[alcohol]].
 #: {{usex|lang=en|The bartender '''cuts''' his beer to save money and now it's all watery.}}
-# {{context|transitive|dated|lang=en}} To [[ignore]] as a social [[snub]].
-#: {{usex|lang=en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
-# {{context|transitive|slang|lang=en}} To [[wound]] with a knife.
-#* '''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
-#*: We don't want your money no more. We just going to '''cut''' you.
 # {{context|transitive|lang=en}} To exhibit (a quality).
 #* {{quote-news|year=2011|date=January 25|author=Paul Fletcher|work=BBC
 |title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]
 |passage=Arsenal were starting to work up a head of steam and Tractor Boys boss Paul Jewell '''cut''' an increasingly frustrated figure on the touchline.}}
-# {{context|transitive|lang=en}} To [[stop]] or [[disengage]]
+# {{context|transitive|lang=en}} To [[stop]] or [[disengage]].
 #: {{usex|lang=en|'''Cut''' the engines when the plane comes to a halt!}}
-# {{context|intransitive|lang=en}} To admit of incision or severance; to yield to a cutting instrument.
-#* '''1858''', {{w|Oliver Wendell Holmes, Sr.}}, ''{{w|The Autocrat of the Breakfast-Table}}'', ''The Deacon's Masterpiece'', in Chapter XI
-#*: The panels of white-wood that '''cuts''' like cheese, / But lasts like iron for things like these;
-# To make a [[stroke]] with a [[whip]].
-# To [[interfere]], as a horse; to strike one foot against the opposite foot or ankle in using the legs.
 
 ====Synonyms====
 * See [[Wikisaurus:cut]]
