--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -8,6 +8,7 @@
 From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|substantia||substance, essence|lang=la}}, from {{term|substāns|lang=la}}, present active participle of {{term|substō||exist; literally, stand under|lang=la}}, from {{term|sub|lang=la}} + {{term|stō||stand|lang=la}}.
 
 ===Pronunciation===
+* {{a|US}} {{IPA|/ˈsʌbstəns/}}
 * {{audio|en-us-substance.ogg|Audio (US)}}
 
 ===Noun===
@@ -47,6 +48,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 
 ====Translations====
 {{trans-top|matter}}
+* Asturian: {{t|ast|sustancia|f}}
 * Catalan: {{t|ca|substància|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|物質|sc=Hani}}, {{t+|cmn|物质|tr=wùzhì|sc=Hani}}
@@ -56,6 +58,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 * Esperanto: {{t|eo|substanco}}
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
+* Galician: {{t|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
 * Greek: {{t+|el|ουσία|f|tr=ousía}}
 * Hebrew: {{t+|he|חומר|m|tr=khómer}}
@@ -63,6 +66,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
 {{trans-mid}}
 * Irish: {{t|ga|mianach|m}}
+* Italian: {{t|it|sostanza|f}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
 * Latin: {{t|la|substantia|f}}
 * Latvian: {{t|lv|viela|f}}
@@ -78,6 +82,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 {{trans-bottom}}
 
 {{trans-top|essential part}}
+* Asturian: {{t|ast|sustancia|f}}
 * Catalan: {{t|ca|substància|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|實質|sc=Hani}}, {{t+|cmn|实质|tr=shízhì|sc=Hani}}
@@ -125,7 +130,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 *: {{trreq|cmn}}
 * Finnish: {{t+|fi|aine|alt=aineet|p}}
 * German: {{t+|de|Substanz|f}}
-* Greek: {{t+|el|ουσίες|tr=ousíes}} {{f-p}}
+* Greek: {{t+|el|ουσίες|tr=ousíes|f-p}}
 * Hungarian: {{t+|hu|szer}}
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
