t+el:[[εικόνισμα]] ([[WT:EDIT|Assisted]]) <icon#24018611>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -73,7 +73,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Finnish: {{t+|fi|ikoni}}
 * Galician: {{t|gl|icona|f}}
 * German: {{t+|de|Ikone|f}}
-* Greek: {{t+|el|εικόνα|f|tr=eikóna}}
+* Greek: {{t+|el|εικόνα|f|tr=eikóna}}, {{t+|el|εικόνισμα|n|sc=Grek}}
 * Hungarian: {{t+|hu|ikon}}
 * Indonesian: {{t+|id|arca}}
 {{trans-mid}}
