--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -57,7 +57,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * Afrikaans: {{t|af|vind}}
 * Ainu: {{t|ain|パ|tr=pa}}
 * Albanian: {{t|sq|gjej}}
-* Arabic: {{t+|ar|وجد|tr=wájada}}
+* Arabic: {{t+|ar|وجد|tr=wájada}}, {{t|ar|لقى|tr=laqā|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|لقى|tr=lqa}}, {{t|ary|صاب|tr=ṣab}}, {{t|ary|جبر|tr=jber}}
 * Armenian: {{t|hy|գտնել}}
 * {{trreq|av}}
