--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -32,6 +32,8 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
 # {{context|intransitive|lang=en}} To [[appear]], to [[manifest]] itself.
 #: {{usex|lang=en|The pain in his leg '''comes''' and goes.}}
+#* ''Hudibras''
+#*: when butter does refuse to '''come''' [i.e. to form]
 # {{context|intransitive|lang=en}} To take a position to something else in a [[sequence]].
 #: {{usex|lang=en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
 # {{context|intransitive|slang|lang=en}} To achieve [[orgasm]]; to [[cum]].
@@ -46,6 +48,8 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: {{usex|lang=en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{context|copulative|archaic|lang=en}} To [[become]], to [[turn out]] to be.
 #: {{usex|lang=en|He was a dream '''come''' true.}}
+#* Shakespeare
+#*: How '''come''' you thus estranged?
 # {{context|intransitive|lang=en}} To be supplied, or made available; to exist.
 #: {{usex|lang=en|He's as tough as they '''come'''.&nbsp;&nbsp; Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.}}
 # {{context|slang|lang=en}} To carry through; to succeed in.
