##* Shakespeare  ##*: Why should a man, whose blood is warm within, / Sit like his grandsire '''cut''' in alabaster?  ##* Milton  ##*: loopholes '''cut''' through thickest shade  ## To [[castrate]] or [[geld]].  ##: ''to '''cut''' a horse'' <cut#24026342>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -310,10 +310,16 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 ##*: Before the whistling winds the vessels fly, / With rapid swiftness '''cut''' the liquid way.
 ## To [[form]] or [[shape]] by cutting.
 ##: {{usex|lang=en|I have three diamonds to '''cut''' today.}}
+##* Shakespeare
+##*: Why should a man, whose blood is warm within, / Sit like his grandsire '''cut''' in alabaster?
+##* Milton
+##*: loopholes '''cut''' through thickest shade
 ## To [[wound]] with a knife.
 ##* '''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
 ##*: We don't want your money no more. We just going to '''cut''' you.
-## To make a [[stroke]] with a [[whip]].
+## To deliver a [[stroke]] with a [[whip]] to.
+## To [[castrate]] or [[geld]].
+##: ''to '''cut''' a horse''
 ## To [[interfere]], as a horse; to strike one foot against the opposite foot or ankle in using the legs.
 # {{context|intransitive|lang=en}} To admit of incision or severance; to yield to a cutting instrument.
 #* '''1858''', {{w|Oliver Wendell Holmes, Sr.}}, ''{{w|The Autocrat of the Breakfast-Table}}'', ''The Deacon's Masterpiece'', in Chapter XI
