--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -94,6 +94,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Galician: {{t|gl|chupar}}
 * Georgian: {{t|ka|წოვა|sc=Geor}}
 * German: {{t+|de|saugen}}
+* Greek: {{t+|el|βυζαίνω|sc=Grek}}, {{t+|el|ρουφάω|sc=Grek}}
 * Hebrew: {{t|he|למצוץ|tr=limtsots}}
 * Hindi: {{t|hi|चूसना|tr=cūsnā}}
 * Hungarian: {{t+|hu|szopik}}
@@ -137,8 +138,9 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 {{trans-bottom}}
 {{trans-top|to work the lips and tongue on}}
 * German: {{t|de|lutschen}}
-* Portuguese: {{t+|pt|chupar}}
+* Greek: {{t+|el|γλείφω|sc=Grek}}, {{t+|el|πιπιλίζω|sc=Grek}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|chupar}}
 * Scottish Gaelic: {{t|gd|deoghail}}
 {{trans-bottom}}
 
@@ -148,6 +150,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Finnish: {{t+|fi|haista}}, {{t|fi|olla syvältä}}
 * French: {{t|fr|[[être]] [[chiant]]}}, {{t|fr|[[être]] [[nul]]}}
 * German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
+* Greek: {{t|el|άστα να πάνε|sc=Grek}} {{qualifier|situation}}, {{t|el|είμαι μαλάκας|sc=Grek}} {{qualifier|person}}
 * Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
 {{trans-mid}}
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
