--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -36,8 +36,8 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Arabic: {{t|ar|سكرتير|m|tr=sikritér}}, {{t+|ar|سكرتيرة|f|tr=sikritéra}}
 * Armenian: {{t|hy|քարտուղար|tr=kʿartułar|sc=Armn}}, {{qualifier|female}} {{t|hy|քարտուղարուհի|tr=kʿartułaruhi|sc=Armn}}
 * Basque: {{t|eu|idazkari}}
-* Bulgarian: {{t+|bg|секретар|m|tr=sekretar}}, {{t|bg|секретарка|f|tr=sekretarka}}
-* Chechen: [[йозанча]]
+* Bulgarian: {{t+|bg|секрета́р|m|tr=sekretár}}, {{t|bg|секрета́рка|f|tr=sekretárka}}
+* Chechen: {{t|ce|йозанча|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|秘書|sc=Hani}}, {{t+|cmn|秘书|tr=mìshū|sc=Hani}}
 * Czech: {{t|cs|sekretář|m}}, {{t|cs|sekretářka|f}}
@@ -51,7 +51,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Hebrew: {{t|he|מזכיר|m|tr=mazkir}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * Ido: {{t+|io|sekretario}}
-* Interlingua: [[secretaria]] {{g|f}}
+* Interlingua: {{t|ia|secretaria|f}}
 * Irish: {{t|ga|rúnaí|m}}
 * Italian: {{t+|it|segretario|m}}
 * Japanese: {{t|ja|秘書|tr=ひしょ, hisho}}
@@ -59,7 +59,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 {{trans-mid}}
 * Korean: {{t+|ko|비서|tr=biseo|sc=Kore}} ({{t+|ko|秘書|sc=Kore}})
 * Kurdish:
-*: Kurmanji: [[katib]], [[sekreter]]
+*: Kurmanji: {{t|kmr|katib}}, {{t|kmr|sekreter}}
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 * Lao: {{t|lo|ເລຂານຸການ|sc=Laoo}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
@@ -67,16 +67,16 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Polish: {{t+|pl|sekretarz|m}}, {{t+|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t|ro|secretar}}
-* Russian: {{t+|ru|секретарь|m|f|tr=sekretár’}}, {{t+|ru|секретарша|f|tr=sekretárša}} {{qualifier|colloquial}}
+* Russian: {{t+|ru|секрета́рь|m|f|tr=sekretár’}}, {{t+|ru|секрета́рша|f|tr=sekretárša}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian: {{t|sh|tȃjnīk|m}}, {{t|sh|tȃjnica|f}}
 * Spanish: {{t+|es|secretario|m}}, {{t|es|secretaria|f}}
 * Swahili: {{t+|sw|karani}}
 * Swedish: {{t+|sv|sekreterare|c}}
 * Tagalog: {{t|tl|sekretarya}}
-* Telugu: [[కార్యదర్శి]] (kaaryadarSi), [[సహాయకుడు]] (sahaayakuDu)
+* Telugu: {{t|te|కార్యదర్శి|tr=kaaryadarSi|sc=Telu}}, {{t|te|సహాయకుడు|tr=sahaayakuDu|sc=Telu}}
 * Thai: {{t|th|เลขานุการ|sc=Thai}}
-* Tok Pisin: [[sekreteri]]
+* Tok Pisin: {{t|tpi|sekreteri}}
 * Turkish: {{t+|tr|sekreter}}
 * Vietnamese: {{t+|vi|thư ký}}
 * Volapük: {{t+|vo|sekretan}}
@@ -94,22 +94,22 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * German: {{t+|de|Minister|m}}
 * Greek: {{t+|el|υπουργός|m|f|tr=ipurgós}}
 * Hungarian: {{t+|hu|miniszter}}, {{t+|hu|államtitkár}}
-* Interlingua: [[secretaria]] {{g|f}}
+* Interlingua: {{t|ia|secretaria|f}}
 * Irish: {{t|ga|rúnaí|m}}
 * Japanese: {{t+|ja|大臣|tr=だいじん, daijin}}, {{t+|ja|長官|tr=ちょうかん, chōkan}}
 {{trans-mid}}
 * Kurdish:
-*: Kurmanji: [[sekreter]]
+*: Kurmanji: {{t|kmr|sekreter}}
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
-* Russian: {{t+|ru|министр|m|tr=minístr}}, {{t+|ru|секретарь|m|tr=sekretár’}}
+* Russian: {{t+|ru|мини́стр|m|tr=minístr}}, {{t+|ru|секрета́рь|m|tr=sekretár’}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian: {{t|sh|tȃjnīk|m}}, {{t|sh|tȃjnica|f}}
 * Spanish: {{t+|es|secretario|m}}
 * Swahili: {{t+|sw|karani}}
-* Telugu: [[కార్యదర్శి]] (kaaryadarSi)
-* Tok Pisin: [[sekreteri]]
+* Telugu: {{t|te|కార్యదర్శి|tr=kaaryadarSi|sc=Telu}}
+* Tok Pisin: {{t|tpi|sekreteri}}
 {{trans-bottom}}
 
 {{trans-top|leading or managerial position in certain organizations}}
@@ -131,12 +131,12 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * French: {{t+|fr|secrétaire}}
 * German: {{t|de|Schreibsekretär|m}}
 * Hungarian: {{t|hu|szekreter}}
-* Interlingua: [[bureau]]
+* Interlingua: {{t|ia|bureau}}
 {{trans-mid}}
 * Kurdish:
-*: Kurmanji: [[sekreter]]
+*: Kurmanji: {{t|kmr|sekreter}}
 * Portuguese: {{t+|pt|escrivaninha|f}}, {{t+|pt|secretária|f}}, {{qualifier|portugal}} {{t+|pt|secretária}}
-* Russian: {{t+|ru|секретер|m|tr=sekretér}}
+* Russian: {{t+|ru|секрете́р|m|tr=sekretɛ́r}}
 * Spanish: {{t+|es|escribanía|f}}
 * Swahili: {{t+|sw|makarani}}
 {{trans-bottom}}
@@ -148,15 +148,15 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Hungarian: {{t|hu|kígyászkeselyű}}
 {{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
-* Russian: {{t+|ru|птица-секретарь|f|tr=ptíca-sekretár’}}
+* Russian: {{t+|ru|пти́ца-секрета́рь|f|tr=ptíca-sekretár’}}
 * Spanish: {{t|es|serpentario|m}}
 * Swahili: {{t+|sw|makarani}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|id}}: [[sekretaris]]
-* {{ttbc|ia}}: [[secretario]] {{g|m}}, [[scriptorio]]
-* {{ttbc|it}}: [[segretario]] {{g|m}}, [[segretaria]] {{g|f}}
+* {{ttbc|id}}: {{t|id|sekretaris}}
+* {{ttbc|ia}}: {{t|ia|secretario|m}}, {{t|ia|scriptorio}}
+* {{ttbc|it}}: {{t|it|segretario|m}}, {{t|it|segretaria|f}}
 {{trans-bottom}}
 
 ===Verb===
