--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -16,7 +16,9 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 
 # A [[buoyant]] device used to support something in water or another liquid.
 #: ''Attach the '''float''' and the weight to the fishing line, above the hook.''
-# A tool similar to a [[rasp]], used in various trades
+# A mass of timber or boards fastened together, and conveyed down a stream by the current; a [[raft]].
+# A [[float board]].
+# A tool similar to a [[rasp]], used in various trades.
 # A sort of [[trowel]] used for finishing [[concrete]] surfaces or smoothing [[plaster]].
 #: ''When pouring a new driveway, you can use a two-by-four as a '''float'''.''
 # An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
@@ -41,6 +43,16 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 # {{context|knitting|lang=en}} One of the loose ends of [[yarn]] on an unfinished work.
 # {{context|automotive|lang=en}} a [[car carrier]] or [[car transporter]] truck or truck-and-trailer combination
 # {{context|transport|lang=en}} a [[lowboy]] trailer
+# {{cx|tempering|lang=en}} A device sending a copious stream of [[water]] to the heated surface of a bulky object, such as an [[anvil]] or [[die]].
+#: {{rfquotek|Knight}}
+# {{cx|obsolete|lang=en}} The act of flowing; flux; flow.
+#: {{rfquotek|Francis Bacon}}
+# A quantity of [[earth]], eighteen feet square and one foot deep.
+#: {{rfquotek|Mortimer}}
+# A polishing block used in marble working; a runner.
+#: {{rfquotek|Knight}}
+# {{cx|UK|dated|lang=en}} A [[coal]] [[cart]].
+#: {{rfquotek|Simmonds}}
 
 ====Synonyms====
 * {{sense|Shares offered to the public:}} [[initial public offering]]
