--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -103,6 +103,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * German: {{t+|de|Kurve|f}}
 {{trans-mid}}
 * Persian: {{t+|fa|منحنی|tr=monhani|sc=fa-Arab}}
+* Portuguese: {{t+|pt|curva|f}}
 {{trans-bottom}}
 
 {{trans-top|geometry: one-dimensional figure}}
@@ -129,6 +130,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Macedonian: {{t|mk|крива|f|tr=kríva|sc=Cyrl}}
 * Persian: {{t+|fa|خم|tr=xam|sc=fa-Arab}}
 * Polish: {{t+|pl|krzywa|f}}
+* Portuguese: {{t+|pt|curva|f}}
 * Romanian: {{t+|ro|curbă|f}}, {{t|ro|linie curbă|f}}, {{t|ro|linie curbată|f}}
 * Russian: {{t+|ru|кривая|f|tr=krivája}}
 * Scottish Gaelic: {{t|gd|bogha|f}}, {{t|gd|lùb|f}}
@@ -148,6 +150,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Hebrew: {{t|he|חיטובים|m-p|tr=khit'uvym}}
 * Macedonian: {{t|mk|облини|f-p|tr=óblini}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|curvas|f-p}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|облине|p|sc=Cyrl}}
 *: Roman: {{t|sh|obline|f-p}}
@@ -166,6 +169,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Italian: {{qualifier|usually plural}} {{t+|it|curva|f}}
 {{trans-mid}}
 * Macedonian: {{t|mk|облина|f|tr=óblina|sc=Cyrl}}
+* Portuguese: {{t+|pt|curvas|f-p}}
 * Russian: {{t+|ru|изгиб|m|tr=izgíb}} (usually plural: {{t|ru|изгибы|m-p|tr=izgíby}})
 * Serbo-Croatian: {{t|sh|облина|f|tr=oblina|sc=Cyrl}}
 * Spanish: {{t|es|curvas|f}}
@@ -198,6 +202,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Korean: {{t+|ko|구부리다|tr=guburida|sc=Kore}}
 {{trans-mid}}
 * Macedonian: {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|свиткува|tr=svítkuva|sc=Cyrl}}, {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|искривува|tr=iskrívuva|sc=Cyrl}}
+* Portuguese: {{t+|pt|curvar}}, {{t+|pt|envergar}}, {{t+|pt|envergar}}
 * Russian: {{t+|ru|изгибать}}, {{t+|ru|гнуть}}
 * Scottish Gaelic: {{t|gd|crom}}, {{t|gd|lùb}}
 * Swedish: {{t+|sv|böja}}, {{t+|sv|kröka}}
@@ -206,6 +211,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 
 {{trans-top|cause to swerve from a straight course}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|curvar}}
 {{trans-bottom}}
 
 {{trans-top|bend or turn gradually from a given direction}}
@@ -218,6 +224,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 * Korean: {{t+|ko|구부러지다|tr=gubureojida|sc=Kore}}
 * Macedonian: {{t|mk|се извива|tr=se ízviva|sc=Cyrl}}
+* Portuguese: {{t+|pt|curvar}}
 * Russian: {{t+|ru|изгибаться|sc=Cyrl}}, {{t+|ru|гнуться|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|lùb}}
 * Swedish: {{t+|sv|böja}} (sig)
