t-balance t+gl:[[tocar]] ([[WT:EDIT|Assisted]]) <play#24079681>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -163,6 +163,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer|alt=jouer de}}
+* Galician: {{t+|gl|tocar}}
 * Georgian: {{t|ka|უკრავს|sc=Geor}}
 * Greek: {{t+|el|παίζω|tr=pézo}}
 * Hebrew: {{t|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
@@ -171,8 +172,8 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Icelandic: {{t|is|spila}}, {{t|is|spila á}}
 * Irish: {{t|ga|seinn}}
 * Italian: {{t+|it|suonare}}
-* Japanese: {{t|ja|演奏する|tr=えんそうする, ensō-suru|sc=Jpan}}, {{t|ja|奏でる|tr=かなでる, kanaderu|sc=Jpan}} {{qualifier|string instruments including piano}} {{t+|ja|弾く|tr=ひく, hiku|sc=Jpan}}, {{qualifier|wind instruments}} {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}, {{qualifier|drums}} {{t+|ja|叩く|tr=たたく, tataku|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|演奏する|tr=えんそうする, ensō-suru|sc=Jpan}}, {{t|ja|奏でる|tr=かなでる, kanaderu|sc=Jpan}} {{qualifier|string instruments including piano}} {{t+|ja|弾く|tr=ひく, hiku|sc=Jpan}}, {{qualifier|wind instruments}} {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}, {{qualifier|drums}} {{t+|ja|叩く|tr=たたく, tataku|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|jouer}}, {{t|roa-jer|sonner}}
 * Latgalian: {{t|ltg|spieļuot}}
 * Latvian: {{t|lv|spēlēt}}
