t+gl:[[tocar]] ([[WT:EDIT|Assisted]]) <play#24079682>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -205,6 +205,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Dutch: {{t+|nl|spelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
+* Galician: {{t+|gl|tocar}}
 * German: {{t+|de|spielen}}
 * Greek: {{t+|el|παίζω|tr=pézo}}
 * Hebrew: {{t|he|ניגן|tr=nigén}}
