--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -151,6 +151,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Mongolian: {{t|mn|гүүр тавих|tr=güür tavih|sc=Cyrl}}, {{t|mn|гүүр|tr=güür|sc=Cyrl}}
 * Navajo: {{t|nv|naʼníʼá}}
 * Nepali: {{t|ne|पुल|tr=pul|sc=Deva}}
+* North Frisian: {{t|frr|brag|f}}
 * Norwegian: {{t+|no|bro|m|f}}, {{t+|no|bru|m|f}}
 * Occitan: {{t+|oc|pònt|m}}
 * Okinawan: {{t|ryu|ぱし|tr=pashi}}
