--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -290,6 +290,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * French: {{t+|fr|digérer}}
 * Portuguese: {{t+|pt|aturar}}
 {{trans-bottom}}
+on a girl this thing is so fucking hot
 
 ===Anagrams===
 * [[Satchmo#English|Satchmo]]
