t+it:[[tagliato]] ([[WT:EDIT|Assisted]]) <cut#24082641>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -64,7 +64,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Finnish: {{t|fi|leikattu}}, {{t+|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
 * German: {{t+|de|geschnitten}}
 {{trans-mid}}
-* Italian: {{t+|it|ridotto}}
+* Italian: {{t+|it|ridotto}}, {{t+|it|tagliato}}
 * Portuguese: {{t+|pt|reduzido|m}}
 * Russian: {{t|ru|уре́заный|sc=Cyrl|tr=urézanyj}}
 {{trans-bottom}}
