t+it:[[tagliato]] ([[WT:EDIT|Assisted]]) <cut#24082645>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -76,6 +76,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * French: {{t+|fr|taillé}}
 {{trans-mid}}
 * German: {{t+|de|geschnitten}}, {{t+|de|geschliffen}}
+* Italian: {{t+|it|tagliato}}
 * Portuguese: {{t|pt|carvado|m}}
 * Russian: {{t|ru|огранённый|sc=Cyrl|tr=ogranjónnyj}}
 * Spanish: {{t+|es|tallado}}
