t+it:[[taglio]] ([[WT:EDIT|Assisted]]) <cut#24082650>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -268,7 +268,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * German: {{t+|de|Schnitt|m}}
 {{trans-mid}}
 * Icelandic: {{t+|is|snið|n}}
-* Italian: {{t+|it|taglia|f}}
+* Italian: {{t+|it|taglia|f}}, {{t+|it|taglio|m}}
 * Russian: {{t+|ru|покро́й|m|sc=Cyrl|tr=pokrój}}
 * Spanish: {{t+|es|corte|m}}
 * Swedish: {{t|sv|skärning|c}}, {{t+|sv|snitt|n}}
