--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -12,7 +12,7 @@
 From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 
 ===Adjective===
-'''curve'''
+{{en-adj|?}}
 
 # {{context|obsolete|lang=en}} Bent without angles; crooked; curved.
 #: ''a curve line''
@@ -35,7 +35,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 # {{context|geometry|lang=en}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{context|algebraic geometry|lang=en}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
 # {{context|topology|lang=en}} A one-dimensional [[continuum]].
-# (''informal, usually in plural'' '''curves''') The attractive shape of a woman's body.
+# {{cx|informal|usually in plural|lang=en}} The attractive shape of a woman's body.
 
 ====Derived terms====
 {{rel-top4|terms derived from curve (noun)}}
@@ -70,7 +70,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Afrikaans: {{t|af|kurwe}}
 * Basque: {{t+|eu|kurba}}
 * Bulgarian: {{t+|bg|извивка|f}}
-* Catalan: {{t+|ca|revolt}}, {{g|m}}
+* Catalan: {{t+|ca|revolt|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|曲線|sc=Hani}}, {{t+|cmn|曲线|tr=qūxiàn|sc=Hani}}, {{t|cmn|彎子|sc=Hani}}, {{t+|cmn|弯子|tr=wānzi|sc=Hani}}
 * Czech: {{t+|cs|ohyb}}
@@ -220,7 +220,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: {{t+|fi|kaartaa}}
 * Irish: {{t|ga|cuar}}
 * Italian: {{t+|it|curvare}}
-* Japanese: {{t|ja|曲がる|tr={{Jpan|[[まがる]]}}, magaru|sc=Jpan}}
+* Japanese: {{t|ja|曲がる|tr=まがる, magaru|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t+|ko|구부러지다|tr=gubureojida|sc=Kore}}
 * Macedonian: {{t|mk|се извива|tr=se ízviva|sc=Cyrl}}
