t+io:[[kurveskar]] ([[WT:EDIT|Assisted]]) <curve#24104709>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -218,6 +218,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Bulgarian: {{t|bg|извивам се}}
 * Dutch: {{t+|nl|afbuigen}}
 * Finnish: {{t+|fi|kaartaa}}
+* Ido: {{t+|io|kurveskar}}
 * Irish: {{t|ga|cuar}}
 * Italian: {{t+|it|curvare}}
 * Japanese: {{t|ja|曲がる|tr=まがる, magaru|sc=Jpan}}
