t+io:[[kurvo]] t-balance ([[WT:EDIT|Assisted]]) <curve#24104739>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -81,6 +81,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * German: {{t+|de|Kurve|f}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampýli}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
+* Ido: {{t+|io|kurvo}}
 {{trans-mid}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t+|ja|曲線|tr=きょくせん, kyokusen}}
@@ -121,6 +122,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * German: {{t+|de|Linie|f}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampýli}}
 * Hungarian: {{t+|hu|görbe}}
+* Ido: {{t+|io|kurvo}}
 * Indonesian: {{t+|id|kurva}}
 {{trans-mid}}
 * Italian: {{t+|it|curva|f}}
