t+mn:[[далайн боомт]] t+si:[[ගමන්ලීලාව]] ([[WT:EDIT|Assisted]]) <port#24116882>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -85,7 +85,7 @@
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
 * Malayalam: {{t+|ml|തുറമുഖം|tr=thuRamukham|sc=Mlym}}
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|далайн боомт|sc=Cyrl}}
 * Neapolitan: {{t|nap|puorto}}
 * Norwegian:
 *: Bokmål: {{t+|nb|port}}, {{t+|nb|havn|m|f}}
@@ -98,7 +98,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|лука|f}}
 *: Roman: {{t+|sh|luka|f}}
-* {{trreq|Sinhalese}}
+* Sinhalese: {{t|si|ගමන්ලීලාව|sc=Sinh}}
 * Slovak: {{t|sk|prístav|m}}
 * Slovene: {{t+|sl|luka|f}}, {{t+|sl|pristanišče|n}}
 * Spanish: {{t+|es|puerto|m}}
