--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -45,6 +45,9 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * [[the way to a man's heart is through his stomach]]
 {{rel-bottom}}
 
+====Descendants====
+* [[stummy]], [[tummy]]
+
 ====Translations====
 {{trans-top|digestive organ}}
 * {{trreq|aa}}
