/* Translations */ CHecking pt <fight#24118537>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -235,7 +235,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Norwegian: {{t|no|bekjempe}}
 * Persian: {{t+|fa|مقابله کردن|tr=moqâbele kardan}}
 * Polish: {{t+|pl|walczyć}}
-* {{ttbc|pt}}: {{t+|pt|lutar|alt=lutar contra}} <!-- was "[[lutar]] contra" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t+|pt|combater}}, {{t+|pt|enfrentar}}
+* Portuguese: {{t+|pt|[[lutar]] [[contra]]}}, {{t+|pt|combater}}, {{t+|pt|enfrentar}}
 * Romanian: {{t+|ro|a}}
 * Russian: {{t+|ru|биться|tr=bít's'a}} {{impf}}, {{t+|ru|сражаться|tr=sražát's'a}} {{impf}}
 * Swahili: {{t+|sw|vita}}
