Chinese origins applied (1) verb, (2) noun <昉#24121451>

--- a/en/昉/昉.16945.wikitext
+++ b/en/昉/昉.16945.wikitext
@@ -3,8 +3,8 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6002<sub>7</sub>|canj=日卜竹尸 (AYHS)}}
 
-# bright dawn, daybreak
-# [[appear]]
+# [[start]]
+# [[dawn]]
 
 ====References====
 * {{Han ref|kx=0491.040|dkj=13796|dj=0852.120|hdz=21496.020|uh=6609|ud=26121|bh=CCC4|bd=52420}}
