--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -8,8 +8,8 @@
 {{etyl|enm|en}} {{term|streght|lang=enm}}, the past participle of {{term|strechen||lang=enm|to stretch}}, from {{etyl|ang|en}} {{term|streccan|lang=ang}}.
 
 ===Pronunciation===
-* {{X-SAMPA|/streIt/}}
 * {{audio|en-us-straight.ogg|Audio (US)}}
+* {{IPA|/stɹeɪt/}}
 * {{rhymes|eɪt}}
 * {{homophones|lang=en|strait}}
 
@@ -83,9 +83,9 @@
 # {{context|obsolete|rare|lang=en}} [[strait|Strait]]; [[narrow]].
 #* Sir J. Mandeville
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
-# {{cx|US|politics|lang=en}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
+# {{context|US|politics|lang=en}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
 #: ''a '''straight''' Republican; a '''straight''' Democrat''
-# {{cx|US|politics|lang=en}} Containing the names of all the regularly nominated candidates of a party and no others.
+# {{context|US|politics|lang=en}} Containing the names of all the regularly nominated candidates of a party and no others.
 #: ''a '''straight''' ballot''
 
 ====Antonyms====
