t+pt:[[custo]] ([[WT:EDIT|Assisted]]) <cost#24135857>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -147,6 +147,7 @@ From {{etyl|enm|en}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{ter
 *: Nynorsk: {{t|nn|kostnad|m}}
 * Novial: [[kosto]]
 * Polish: {{t+|pl|cena|f}}
+* Portuguese: {{t+|pt|custo|m}}
 * Russian: {{t+|ru|издержки|f-p|tr=izdéržki}}, {{t+|ru|затраты|f-p|tr=zatráty}}, {{t+|ru|цена|f|tr=tsená}}
 * Scottish Gaelic: {{t|gd|cosgais|f}}, {{t|gd|prìs|f}}, {{t|gd|cosg|m}}
 * Spanish: {{t+|es|costo|m}}
