t+ht:[[Repiblik Tchekoslovaki]] ([[WT:EDIT|Assisted]]) <Czech Republic#24136014>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -40,6 +40,7 @@
 * French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
 * German: {{t+|de|Tschechische Republik}}, {{t+|de|Tschechien|n}}, {{t+|de|Tschechei|f}}
 * Greek: {{t|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías|sc=Grek}}, {{t+|el|Τσεχία|f|tr=Tsechía|sc=Grek}}
+* Haitian Creole: {{t|ht|Repiblik Tchekoslovaki}}
 * Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}, {{t|he|צ'כיה|f|tr=chekhia|sc=Hebr}}
 * Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}, {{t+|hi|चेक|tr=cek|sc=Deva}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
