Converting simple translation table items to use {{t}} <cost#24153473>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -114,7 +114,7 @@ From {{etyl|enm|en}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{ter
 * Norwegian:
 *: Bokmål: {{t+|nb|kostnad|m}}
 *: Nynorsk: {{t|nn|kostnad|m}}
-* Novial: [[kosto]]
+* Novial: {{t|nov|kosto}}
 * Polish: {{t+|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
 * Romanian: {{t|ro|cost}}, {{t|ro|preț}}
@@ -145,7 +145,7 @@ From {{etyl|enm|en}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{ter
 * Norwegian:
 *: Bokmål: {{t+|nb|kostnad|m}}
 *: Nynorsk: {{t|nn|kostnad|m}}
-* Novial: [[kosto]]
+* Novial: {{t|nov|kosto}}
 * Polish: {{t+|pl|cena|f}}
 * Portuguese: {{t+|pt|custo|m}}
 * Russian: {{t+|ru|издержки|f-p|tr=izdéržki}}, {{t+|ru|затраты|f-p|tr=zatráty}}, {{t+|ru|цена|f|tr=tsená}}
