Chinese origin applied (1,2,3) verb, (4,5) adj. <偪#24155219>

--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -3,8 +3,11 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>6</sub>|canj=人一口田 (OMRW)|ids=⿰[[亻]][[畐]]}}
 
-# [[compel]], [[pressure]], [[force]]
-# [[bother]]
+# [[approach]], [[get]] [[close]]
+# [[compel]], [[force]]
+# [[drive]], [[pursue]]
+# [[narrow]]
+# [[urgent]]
 
 ====References====
 * {{Han ref|kx=0111.230|dkj=00887|dj=0237.200|hdz=10187.020|uh=506A|ud=20586|bh=D44D|bd=54349}}
