Korean definitions enriched <偪#24155325>

--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -40,7 +40,8 @@
 ===Hanja===
 {{ko-hanja|hangeul=핍|rv=pip|mr=p'ip}}
 
-# {{defn|lang=ko|sort=人09}}
+# [[compel]], [[force]]
+# [[narrow]]
 
 ----
 
