Converting simple translation table items to use {{t}} <France#24156629>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -46,7 +46,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Afrikaans: {{t+|af|Frankryk}}
 * Albanian: {{t+|sq|Franca}}
 *: Gheg: [[Frankreich]]
-* American Sign Language: [[F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist]]
+* American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Antillean Creole: {{t|gcf|Lafrans}}
 * Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}, {{qualifier|archaic}} {{t|ar|بلاد الإفرنج|f-p|tr=blad alʔifranj}}, {{qualifier|archaic}} {{t|ar|بلاد الفرنجة|f-p|tr=bilad alfirinja}}
 *: Egyptian Arabic: {{t|arz|فرنسا|f|tr= faransa|sc=Arab}}
@@ -117,7 +117,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Lithuanian: {{t+|lt|Prancūzija}}
 * Livonian: {{t|liv|Prantsūzmō}}
 * Lojban: {{t|jbo|fasygu'e}}
-* Low German: [[Frankriek]]
+* Low German: {{t|nds|Frankriek}}
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
@@ -175,7 +175,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Uyghur: {{t|ug|فرانسىيە|sc=ug-Arab}}
 * Vietnamese: {{t+|vi|Pháp}}, {{t|vi|nước Pháp}}
 * Volapük: {{t+|vo|Fransän}}, {{qualifier|obsolete}} {{t|vo|Flent}}, {{qualifier|obsolete}} {{t|vo|Flentän}}
-* Võro: [[Prantsusmaa]]
+* Võro: {{t|vro|Prantsusmaa}}
 * Walloon: {{t+|wa|France|f}}
 * Welsh: {{t+|cy|Ffrainc|f}}
 * West Frisian: {{t+|fy|Frankryk}}
